--- a/public/main/styles.css
+++ b/public/main/styles.css
@@ -1,4 +1,38 @@
+body{
+    min-height: 100vh;
+}
+header{
+    background-color: #f1f1f1;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: 0 5px 2px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+}
+.header{
+    max-width: 70%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+
+section{
+    margin-top: 6rem;
+}
+
+
+
+.pageContent{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 0.78rem;
+    row-gap: 0.78rem;
+}
 .container{
     border: 1px solid black;
     padding: 12px;
