--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,45 +8,49 @@
     <title>Koloma</title>
 </head>
 <body>
-    <h1>news</h1>
-    <% if(locals.posts){%>
-        
-        <% for(let i=0; i<=posts.length -1; i++){%>
-
-            <div class="container">
-                <div class="box">
-                    <div class="images">
-                        <% for(let j=0; j<=posts[i].uploadImage.link.length; j++){%>
-                            <img src="/public/uploads/" +<%= posts[i].uploadImage.link[j]%> alt="Photo publier" width="100px" height="100px">
-
-                       <% } %>
-                    </div>
-                    <div class="content">
-                        <h5><%= posts[i].post.name %></h5>
-                        <p><%= posts[i].post.message %></p>
-                        <div class="like">
-                            <!-- icon like -->
-                            <button name="like" id="likeButton"><i class='bx bx-like'><%= posts[i].like.likes %></i></button>
-                            <button name="dislike" id="dislikeButton"><i class='bx bx-dislike' ><%= posts[i].like.dislike %></i></button>
-                            
-                        </div>
-                    </div>
-                </div>
-                
+    <header>
+        <div class="header">
+            <h1 class="logo">News/Koloma</h1>
+            <div class="publie">
+                <a href="/form" class="btn" id="btn">Post</a>
             </div>
+            
+        </div>
+    </header>
+    <section>
+        <div class="pageContent">
+            <% if(locals.posts){%> 
+                
+                <% for(let i=0; i<=posts.length -1; i++){%>
+                    
+                    <div class="container">
+                        <div class="box">
+                            <div class="images">
+                                <img src="uploads/" alt="Photo publier" width="100px" height="100px">
+                            </div>
+                            <div class="content">
+                                <h5><%= posts[i].post.name %></h5>
+                                <p><%= posts[i].post.message %></p>
+                                <div class="like">
+                                    <!-- icon like -->
+                                    <button name="like" id="likeButton"><i class='bx bx-like'><%= posts[i].like.likes %></i></button>
+                                    <button name="dislike" id="dislikeButton"><i class='bx bx-dislike' ><%= posts[i].like.dislike %></i></button>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
 
 
-        <%} %>
-
-        
+                <%} %>
 
 
-   <% }else{ %>
-        <% console.error(); %>
-   <% } %>
-    
-    <a href="/form" class="btn" id="btn">Post</a>
-
+            <% }else{ %>
+                    <% console.error(); %>
+            <% } %>
+        </div>
+    </section>
 
     <script>
 
